---------------------------------------------------------------------------------------------------
Version: 0.6.000
Date: 2024-08-09
  The metalloid? i hardly know her! (oh and some graphical updates ig) Update:

  Additions:
    - Added Boron.
    - Added Silicon.
    - Added Tellurium.
    - Added Germanium.
    - Added Yttrium.
    - Added two new ways to make glass and glass products: borosilicate glass and molten potassium. One allows for betterer recipes of stuff like glass bottles and fibers, and the other allows for more efficient glass recipes.
    - Added robochargers and robostashers, like the thing from that one mod.
    - Added an even better tier of water electrolysis, using a Nitrogen-doped nickel-molybdenum-phosphide catalyst. Why? because i wouldnt be a good devman if i wasnt sitting here talking to you, now would i?
    - Added a more efficient way to make plastic pellets using yttrium catalysts.
    - Added a better recipe for brass plates to fit in with the other alloys, which takes lead and arsenic.
    - Added some more technology descriptions.
    - Gave Health Bio-Module technologies a crafting speed bost, with 4 tiers giving you 1.5 crafting speed.
    - Added new shotgun shell ammos, so it now matches with normal ammo. (normal, piercing, high density, geneva neglection).
    - Added a sidegrade to shotgun shells, shotgun slugs. Single (up to 4, depending on the type), fast firing and high damaging bullets that have a wide cone of firing and are more expensive than their normal counterparts.
    - A bunch of mini things i did over the course of this update instead of.. actually working on the main content?
    - Added a heavy lube recipe for solar cells.
    - Added chemical plants 2, unlocked at P-TM science.
    - Gave burn-inators an animation.
    - Added lithium-sulfur modular batteries, which are smaller then vanadium-oxide modular batteries but hold less charge.
    - Gave a bunch more recipes producitvity.