@@ -1573,9 +1573,21 @@ data:extend({
     type = "fluid",
     name = "pm-dichlorosilane",
     icon_size = 64,
-    icon = "__periodic-madness__/graphics/icons/fluids/trichlorosilane.png",
+    icon = "__periodic-madness__/graphics/icons/fluids/dichlorosilane.png",
     subgroup = "pm-silicon-mt",
     order = "b",
+    default_temperature = 15,
+    auto_barrel = false,
+    base_color = {r = 0.968, g = 0.68, b = 1},
+    flow_color = {r = 0.968, g = 0.68, b = 1}
+  },
+  {
+    type = "fluid",
+    name = "pm-dimethyldichlorosilane",
+    icon_size = 64,
+    icon = "__periodic-madness__/graphics/icons/fluids/dimetyhldichlorosilane.png",
+    subgroup = "pm-silicon-mt",
+    order = "ba",
     default_temperature = 15,
     auto_barrel = false,
     base_color = {r = 0.968, g = 0.68, b = 1},
